@startuml

title VendingMachine

package main {
    object main {
    }
}

package drink {

    enum DrinkEnum {
        COKE = 0
        DIET_COKE = 1
        TEA = 2
    }

    abstract class Drink {
        {abstract} name(): str
    }

    class Coke {
        name(): str
    }

    class DietCoke {
        name(): str
    }

    class Tea {
        name(): str
    }

    Coke -up-|> Drink
    DietCoke -up-|> Drink
    Tea -up-|> Drink
}

package coin {

    enum CoinEnum {
        Y100 = 0
        Y500 = 1
    }

    abstract class Coin {
        abstract no(): CoinEnum
        abstract value(): int
    }

    Coin -left-> CoinEnum

    class Y100 {
        no(): CoinEnum
        value(): int
    }

    class Y500 {
        no(): CoinEnum
        value(): int
    }

    Y100 -up-|> Coin
    Y500 -up-|> Coin
}

package vending {

    class VendingMachine {
        buy(drink: DrinkEnum, coin: Coin): Drink
        refund(): list
    }

    class DrinkRepository {
        quantity: dict
        has_stock(drinkEnum: DrinkEnum): bool
        get(drinkEnum: DrinkEnum): Drink
    }

    VendingMachine o-right-> DrinkRepository
    DrinkRepository -right-> DrinkEnum
    DrinkRepository o-right-> Drink

    class Payment {
        put(inserted_coin: Coin, has_stock: bool): void
        transaction(): void
        refund(): list
    }

    VendingMachine o-left-> Payment
    Payment o-down-> UserCoin

    class UserCoin {
        inserted_coin: list
        changes: list
        put(inserted_coin: Coin): void
        add_change(coins: list)
        accept(): Coin
        refund(): list
    }

    class CoinRepository {
        coins: dict
        add(coin: Coin): void
        num(coinEnum: CoinEnum): int
        get(coinEnum: CoinEnum, num: int): list
    }

    Payment o-left-> CoinRepository
}

main --> VendingMachine
CoinRepository o-left-> Coin


@enduml